--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -1,6 +1,6 @@
-## Version: v3.32.1
-## Date: 2021-03-30
-## Update Content: 去除过期活动变量；更新镜像，如无法拉取脚本，请重新拉取镜像。>>https://github.com/dockere/jd-base
+## Version: v3.32.2
+## Date: 2021-03-01
+## Update Content: 增加手机短期活动手机狂欢城互助，去除环球挑战赛互助。（上次更新：更新镜像，如无法拉取脚本，请重新拉取镜像。>>https://github.com/dockere/jd-base）
 
 ## 上面版本号中，如果第2位数字有变化，那么代表增加了新的参数，如果只有第3位数字有变化，仅代表更新了注释，没有增加新的参数，可更新可不更新
 ## 如需更新，请参考（https://github.com/dockere/jd-base）。
@@ -281,15 +281,15 @@ ForOtherJdcfd1=""
 ForOtherJdcfd2=""
 
 
-################################## 定义环球挑战赛互助（选填） ##################################
+################################## 定义京东手机狂欢城互助（选填） ##################################
 ## 具体填法及要求详见本文件最下方“互助码填法示例”
-MyGlobal1=""
-MyGlobal2=""
-MyGlobalA=""
-MyGlobalB=""
+MyJd8181=""
+MyJd8182=""
+MyJd818A=""
+MyJd818B=""
 
-ForOtherGlobal1=""
-ForOtherGlobal2=""
+ForOtherJd8181=""
+ForOtherJd8182=""
 
 
 ################################## 定义东东超市蓝币兑换数量（选填） ##################################
