--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -283,13 +283,13 @@ ForOtherJdcfd2=""
 
 ################################## 定义京东手机狂欢城互助（选填） ##################################
 ## 具体填法及要求详见本文件最下方“互助码填法示例”
-MyJd8181=""
-MyJd8182=""
-MyJd818A=""
-MyJd818B=""
+MyJdCarni1=""
+MyJdCarni2=""
+MyJdCarniA=""
+MyJdCarniB=""
 
-ForOtherJd8181=""
-ForOtherJd8182=""
+ForOtherJdCarni1=""
+ForOtherJdCarni2=""
 
 
 ################################## 定义东东超市蓝币兑换数量（选填） ##################################
